Attempt to fix home screen on mobile

--- a/css/site.css
+++ b/css/site.css
@@ -191,7 +191,8 @@ nav {
   }
 
   .left {
-    width: 100%;
+    margin-left: 5%;
+    width: 90%;
   }
 
   .right {
